<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/conversationListFragment">

    <!-- Chat Flow -->
    <fragment
        android:id="@+id/conversationListFragment"
        android:name="com.clawdroid.feature.chat.ui.ConversationListFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_conversation_list">
        <action
            android:id="@+id/action_conversationList_to_chat"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.clawdroid.feature.chat.ui.ChatFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="conversationId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_chat_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <!-- Voice Flow -->
    <fragment
        android:id="@+id/voiceChatFragment"
        android:name="com.clawdroid.feature.voice.ui.VoiceChatFragment"
        android:label="@string/nav_voice"
        tools:layout="@layout/fragment_voice_chat" />

    <!-- Channel Flow -->
    <fragment
        android:id="@+id/channelListFragment"
        android:name="com.clawdroid.feature.channels.ui.ChannelListFragment"
        android:label="@string/nav_channels"
        tools:layout="@layout/fragment_channel_list">
        <action
            android:id="@+id/action_channelList_to_channelAdd"
            app:destination="@id/channelAddFragment" />
        <action
            android:id="@+id/action_channelList_to_channelDetail"
            app:destination="@id/channelDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/channelAddFragment"
        android:name="com.clawdroid.feature.channels.ui.ChannelAddFragment"
        android:label="@string/channel_add_title" />

    <fragment
        android:id="@+id/channelDetailFragment"
        android:name="com.clawdroid.feature.channels.ui.ChannelDetailFragment"
        android:label="@string/channel_detail_title">
        <argument
            android:name="channelId"
            app:argType="string" />
    </fragment>

    <!-- Settings Flow -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.clawdroid.feature.settings.ui.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_modelSettings"
            app:destination="@id/modelSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_personaSettings"
            app:destination="@id/personaSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_securitySettings"
            app:destination="@id/securitySettingsFragment" />
        <action
            android:id="@+id/action_settings_to_toolSettings"
            app:destination="@id/toolSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_settings_to_languageSettings"
            app:destination="@id/languageSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/modelSettingsFragment"
        android:name="com.clawdroid.feature.settings.ui.ModelSettingsFragment"
        android:label="@string/settings_ai_models"
        tools:layout="@layout/fragment_model_settings" />

    <fragment
        android:id="@+id/personaSettingsFragment"
        android:name="com.clawdroid.feature.settings.ui.PersonaSettingsFragment"
        android:label="@string/settings_persona"
        tools:layout="@layout/fragment_persona_settings" />

    <fragment
        android:id="@+id/securitySettingsFragment"
        android:name="com.clawdroid.feature.settings.ui.SecuritySettingsFragment"
        android:label="@string/security_title"
        tools:layout="@layout/fragment_security_settings" />

    <fragment
        android:id="@+id/toolSettingsFragment"
        android:name="com.clawdroid.feature.tools.ui.ToolSettingsFragment"
        android:label="@string/settings_tools">
        <action
            android:id="@+id/action_toolSettings_to_skillSettings"
            app:destination="@id/skillSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/skillSettingsFragment"
        android:name="com.clawdroid.feature.tools.ui.SkillSettingsFragment"
        android:label="@string/skill_management_title" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.clawdroid.feature.settings.ui.AboutFragment"
        android:label="@string/settings_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/languageSettingsFragment"
        android:name="com.clawdroid.feature.settings.ui.LanguageSettingsFragment"
        android:label="@string/language_title"
        tools:layout="@layout/fragment_language_settings" />

</navigation>
